--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Sample Paint App </title>
+		<title> Simple Paint App </title>
 		<style>
 			body {
 				margin: 0;
@@ -37,7 +37,7 @@
 	</head>
 
 	<body>
-		<h1> Sample Paint App </h1>
+		<h1> Simple Paint App </h1>
 		</br>
 		<p id = "note"> <strong> Note: <strong> </br> 
 				1. Click and drag for draw triangle. </br>
@@ -45,7 +45,7 @@
 		</p>
 		<canvas id = "myCanvas" width="500" height="300"></canvas>
 		<button id = "button" onclick = "startDraw()"> Reset </button>
-		<script src = "Canvas Sample.js"></script>
+		<script src = "Simple Paint App.js"></script>
 
 	</body>
 </html>
